--- a/style.css
+++ b/style.css
@@ -1,41 +1,76 @@
-
-
-body {
-  background-color: #ECDB8C;
-  font-size: 35px;
-  
-  color:#126080;
-  font-family: monospace;
-  
-}
-
-
-h1 {
-  font-family: monospace;
-  font-size: 40px;
-  color: black;
-  animation-name: colorChanger;
-  animation-direction: alternate-reverse;
-   animation-duration: 4s;
-  animation-iteration-count: infinite;
+header{
+  display: flex;
+  width: 100vw;
   text-align: center;
+  font-family: 'Playfair Display SC', serif;
+  font-size: 35px;
+  justify-content:center;
+  position: relative;
+  top: -50px;
+  background: aliceblue; 
+  color:black;
+  border-bottom: solid black;
+  padding-left:0px
+}
+#welcome-section{
+  text-align: center;
+  height: 100vh;
+}
+html{
+  background: white;
+  color: black;
+}
+#projects{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100vw;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: -0px -0px 3px darkgrey;
+  padding: 0px;
+  margin: auto;
+  background-color: white;
+}
+.projectTile{
+  width: 70vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  margin-top: 2vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  margin-bottom: 5vw;
+}
+a{
+  text-decoration: none;
+}
+a:visited{
+  color: grey;
+}
+.textboxlink {
+  text-decoration: none;
+  text-align: center;
+  padding: 1vw;
+  font-family: 'Oswald', sans-serif;
+  color: green;
 }
 
-
-
-#stickyHeading{
-  display: grid;
-  border-radius: 8px 50px  8px 50px;
-  background-color: #F09629;
-  position: sticky;
-  top:0px;
+.textboxlink:hover {
+  color: OrangeRed;
 }
+#navbar{
+  position: fixed;
+  bottom: 0px;
+  width: 100vw;
+  font-size: 20px;
+  color: darkgreen;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  height: 35px;
+  box-shadow: -0px -0px 3px darkgrey;
+  z-index: 99;
+}
+#github{
+  width:300px;
 
-
-@keyframes colorChanger{
-  from {color: #EE2343;
-  font-size: 40px;}
-  to {color: #F11697;
-    font-size: 60px;}
-  
 }
